--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -44,6 +44,9 @@
   color: @text-color;
 }
 
+.dp-red {
+  color: red;
+}
 .dp-color-pass {
   color: green;
 }
@@ -154,9 +157,6 @@
 }
 
 .dp-table {
-  td {
-  }
-
   .ant-btn-link {
     padding: 0px 5px;
   }
@@ -176,8 +176,6 @@
 
   .right {
     height: 100%;
-    //overflow-y: hidden;
-    //overflow-x: hidden;
   }
 }
 
@@ -189,35 +187,6 @@
   }
 }
 
-.dp-drawer-full-height {
-  .ant-drawer-body {
-    height: calc(100% - 55px);
-    padding: 0 16px;
-  }
-}
-
-.dp-tabs-full-height{
-  height: 100%;
-  .ant-tabs-bar {
-    margin-bottom: 0px;
-  }
-  .ant-tabs-content {
-    height: calc(100% - 56px);
-    .ant-tabs-tabpane-active {
-      height: 100%;
-    }
-  }
-}
-
-.dp-card-full-height {
-  .ant-card-head {
-    height: 52px;
-  }
-  .ant-card-body {
-    height: calc(100% - 52px);
-    overflow: auto;
-  }
-}
 .dp-tree-container {
   height: 100%;
   .tree-filter {
