--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -135,21 +135,12 @@ body {
 
 
 .right-float-tab {
-  position: absolute;
+  position: fixed;
   border: 1px solid #e6e9ec;
   border-radius: 6px;
   z-index: 99;
   width: 360px;
   right: 38px;
-
-  &.env {
-    top: 65px;
-    height: calc(100% - 100px);
-  }
-  &.his {
-    top: 100px;
-    height: calc(100% - 135px);
-  }
 
   .dp-bg-light {
     height: 100%;
