not to show env BaseUrl for interfaces from diagnose

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -30,6 +30,9 @@
   cursor: pointer;
   color: @primary-color;
 }
+.dp-drag {
+  cursor: move !important;
+}
 
 .dp-btn-group {
   padding-left: 6px;
