open fullscreen window for pre/post conditions

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -393,6 +393,23 @@
   }
 }
 
+.dp-full-modal {
+  .ant-modal {
+    max-width: 100%;
+    top: 0;
+    padding-bottom: 0;
+    margin: 0;
+  }
+  .ant-modal-content {
+    display: flex;
+    flex-direction: column;
+    height: calc(100vh);
+  }
+  .ant-modal-body {
+    flex: 1;
+  }
+}
+
 .drawer-content .ant-row.ant-form-item {
   margin-bottom: 0 !important;
 }
