--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -28,10 +28,11 @@
 .ant-tabs.dp-tabs-full-height{
     height: 100%;
     .ant-tabs-bar {
+        height: 48px;
         margin-bottom: 0px;
     }
     .ant-tabs-content {
-        height: calc(100% - 56px);
+        height: calc(100% - 48px);
         .ant-tabs-tabpane-active {
             height: 100%;
         }
