exec debug interface pre/post-conditions

--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -27,7 +27,7 @@
 }
 .ant-tabs.dp-tabs-full-height{
     height: 100%;
-    .ant-tabs-bar {
+    .ant-tabs-bar.ant-tabs-top-bar {
         height: 48px;
         margin-bottom: 0px;
     }
