--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -5,6 +5,9 @@
 .ant-btn-link {
     color: @primary-color;
 }
+.ant-input[disabled] {
+    color: rgba(0, 0, 0, 0.5);
+}
 .ant-tree li .ant-tree-node-content-wrapper.ant-tree-node-selected {
     background-color: @itemSelectedBackground;
 }
