--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -319,15 +319,16 @@
     padding-bottom: 0;
     margin: 0;
   }
-
   .ant-modal-content {
     display: flex;
     flex-direction: column;
     height: calc(100vh);
   }
-
   .ant-modal-body {
     flex: 1;
+    .content {
+      height: 100%;
+    }
   }
 }
 
@@ -383,23 +384,6 @@
       line-height: 21px;
       margin-top: 0px;
     }
-  }
-}
-
-.dp-full-modal {
-  .ant-modal {
-    max-width: 100%;
-    top: 0;
-    padding-bottom: 0;
-    margin: 0;
-  }
-  .ant-modal-content {
-    display: flex;
-    flex-direction: column;
-    height: calc(100vh);
-  }
-  .ant-modal-body {
-    flex: 1;
   }
 }
 
