fix an issue of create button position in endpoint cases page

--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -12,6 +12,11 @@
     background-color: @itemSelectedBackground;
 }
 
+.ant-empty.dp-empty-no-margin {
+    margin: 0px !important;
+    padding: 32px 0 !important;
+}
+
 /** set container height to 100% */
 .ant-drawer.dp-drawer-full-height {
     .ant-drawer-body {
