--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -17,6 +17,19 @@
     padding: 32px 0 !important;
 }
 
+.ant-modal-wrap.dp-modal-confirm {
+    .ant-modal {
+        .ant-modal-content {
+            .ant-modal-header {
+
+            }
+            .ant-modal-body {
+                padding: 16px 36px 36px 36px;
+            }
+        }
+    }
+}
+
 /** set container height to 100% */
 .ant-drawer.dp-drawer-full-height {
     .ant-drawer-body {
