--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -12,6 +12,7 @@
 }
 .ant-input[disabled] {
     color: rgba(0, 0, 0, 0.5);
+    cursor: default;
 }
 .ant-tree li .ant-tree-node-content-wrapper.ant-tree-node-selected {
     background-color: @itemSelectedBackground;
