feat: 兼容搜索时的大小写问题

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -253,7 +253,8 @@
     }
     .nodata-tip {
       margin-top: 8px;
-      text-align: center;
+      margin-left: 18px;
+      text-align: left;
     }
   }
 }
