validate debug request path

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -55,7 +55,11 @@
 }
 
 .dp-color-fail {
-  color: #dc2626;
+  border-color: #dc2626;
+}
+
+.dp-field-error {
+  border-color: #ff4d4f;
 }
 
 .dp-center {
