fix: [LYAPI-397]场景编排-添加请求-curl导入 此时还可以选择环境

--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -147,3 +147,13 @@ body {
     padding: 12px 8px 12px 12px;
   }
 }
+
+.ant-modal-root {
+  .ant-modal-wrap {
+    z-index: 1002;
+  }
+  
+  .ant-modal-mask {
+    z-index: 1002;
+  }
+}
