--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -445,7 +445,7 @@ input:-webkit-autofill { -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !impor
   //font-style:italic;
 }
 
-.dp-proccessors-container{
+.dp-processors-container{
   .debug-index-wrapper{
     padding: 16px;
   }
