fix: [LYAPI-441]修改文本域高度

--- a/src/views/component/InterfaceImportFromCurl/index.less
+++ b/src/views/component/InterfaceImportFromCurl/index.less
@@ -1,11 +1,14 @@
 
-textarea.ant-input {
-    max-width: 100%;
-    height: auto;
-    min-height: 300px;
-    line-height: 1.5715;
-    vertical-align: bottom;
-    transition: all 0.3s, height 0s;
+.interface-import-curl {
+    textarea.ant-input {
+        max-width: 100%;
+        height: auto;
+        min-height: 300px;
+        line-height: 1.5715;
+        vertical-align: bottom;
+        transition: all 0.3s, height 0s;
+    }
+
 }
 
 .ant-alert-error {
