fix: [LYAPI-470]景编排-接口调试 变量和 执行里面弹框搞定调整下，样式调整

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -100,7 +100,7 @@
   background-color: white;
 }
 .dp-bg-light {
-  background-color: #fafafa;
+  // background-color: #fafafa;
 
   button {
     background-color: #fafafa;
