--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -136,12 +136,13 @@ body {
 
 .right-float-tab {
   position: fixed;
-  border: 1px solid #e6e9ec;
   border-radius: 6px;
   z-index: 999999;
   width: 360px;
   right: 38px;
-
+  border-radius: 8px;
+  box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.2), 0 3px 6px -4px rgba(0, 0, 0, 0.2), 0 9px 28px 8px rgba(0, 0, 0, 0.08);
+  
   .dp-bg-light {
     height: 100%;
     padding: 12px 8px 12px 12px;
