--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -14,6 +14,11 @@
     color: rgba(0, 0, 0, 0.5);
     cursor: default;
 }
+.ant-select-disabled .ant-select-selection-item {
+    color: rgba(0, 0, 0, 0.45);
+    cursor: default;
+}
+
 .ant-tree li .ant-tree-node-content-wrapper.ant-tree-node-selected {
     background-color: @itemSelectedBackground;
 }
