feat: 调整执行报告 UI

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -453,3 +453,13 @@ input:-webkit-autofill { -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !impor
     margin-bottom: 16px;
  }
 }
+
+// 执行日志树，叶子结点不展示
+.dp-log-tree-view{
+  .ant-collapse-no-arrow .ant-collapse-content{
+    display: none;
+  }
+  .ant-collapse-header{
+    //padding: 12px!important;
+  }
+}
