--- a/src/views/component/Report/components/LogTreeView.less
+++ b/src/views/component/Report/components/LogTreeView.less
@@ -1,11 +1,19 @@
 .log-tree-view{
   //margin-left: 16px;
+
+}
+:deep(.log-tree-view .ant-collapse-no-arrow .ant-collapse-content){
+  display: none;
 }
 .scenario-item{
   margin-top: 16px;
 }
 .log-item{
   margin-top: 16px;
+}
+.log-item-else{
+  position: relative;
+  top:-3px;
 }
 .header-text{
   max-width: 100%;
