feat: 迭代逻辑添加第几轮数据

--- a/src/views/component/Report/components/LogTreeView.less
+++ b/src/views/component/Report/components/LogTreeView.less
@@ -1,21 +1,26 @@
-.log-tree-view{
+.log-tree-view {
   //margin-left: 16px;
 
 }
-:deep(.log-tree-view .ant-collapse-no-arrow .ant-collapse-content){
+
+:deep(.log-tree-view .ant-collapse-no-arrow .ant-collapse-content) {
   display: none;
 }
-.scenario-item{
+
+.scenario-item {
   margin-top: 16px;
 }
-.log-item{
+
+.log-item {
   margin-top: 16px;
 }
-.log-item-else{
+
+.log-item-else {
   position: relative;
-  top:-3px;
+  top: -3px;
 }
-.header-text{
+
+.header-text {
   max-width: 100%;
   display: inline-block;
   //padding: 0 16px;
@@ -23,10 +28,16 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 
-  .label{
+  .label {
 
   }
-  .value{
+
+  .value {
 
   }
+}
+
+.collapse-title {
+  display: inline-block;
+  margin-bottom: 6px;
 }
