feat: 优化表格展示

--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -113,3 +113,7 @@
 ::-webkit-scrollbar-thumb:horizontal:hover {
     background-color: rgb(230, 233, 236);
 }
+
+.ant-table-thead > tr > th, .ant-table-tbody > tr > td {
+    padding: 12px;
+}
