feat: 报告样式修复

--- a/src/views/component/Report/components/LogTreeView.less
+++ b/src/views/component/Report/components/LogTreeView.less
@@ -13,11 +13,15 @@
 
 .log-item {
   margin-top: 16px;
+
 }
 
 .log-item-else {
   position: relative;
   top: -3px;
+}
+.log-item-first{
+  margin-top: 0;
 }
 
 .header-text {
@@ -40,4 +44,5 @@
 .collapse-title {
   display: inline-block;
   margin-bottom: 6px;
+  font-weight: bold;
 }
