fix: 调整响应区域的ui展示

--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -68,6 +68,10 @@
     .ant-tabs-bar.ant-tabs-top-bar {
         height: 48px;
         margin-bottom: 0px;
+
+        .ant-tabs-tab {
+            margin-right: 16px;
+        }
     }
     .ant-tabs-content {
         height: calc(100% - 48px);
