--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -127,3 +127,35 @@
 .ant-table-thead > tr > th, .ant-table-tbody > tr > td {
     padding: 12px;
 }
+
+.drawer-exec, 
+.drawer-exec-history-detail,
+.report-drawer-exec-history,
+.plan-drawer-exec {
+    .ant-drawer-wrapper-body {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+  
+        .ant-drawer-header {
+            height: 55px;
+        }
+    
+        .ant-drawer-body {
+            flex: 1;
+            height: 0;
+            padding: 16px 16px 32px;
+    
+            .scenario-exec-info-main, .report-exec-info-main, .plan-exec-info-main {
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+    
+                .log-tree-view {
+                    flex: 1;
+                    overflow-y: scroll;
+                }
+            }
+        }
+    }
+}
