feat: 更新 mockType 回调

--- a/src/components/SchemaEditor/schema.less
+++ b/src/components/SchemaEditor/schema.less
@@ -58,7 +58,7 @@
       }
       input {
         background-color: @hover-bg-color;
-        text-decoration: 4px solid underline;
+        //text-decoration: 4px solid underline;
       }
     }
   }
