feat: 高级mock页面ui以及部分联调

--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -136,6 +136,34 @@
     padding: 12px;
 }
 
+.mock-detail-form {
+    .ant-table-tbody > tr > td {
+        padding: 4px 0;
+        background-color: #fff !important;
+    }
+
+    .mock-detail-body,
+    .mock-detail-header,
+    .mock-detail-query,
+    .mock-detail-path,
+    .mock-detail-response {
+        .ant-select:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input)
+        .ant-select-selector {
+            border-color: transparent;
+            box-shadow: none;
+        }
+    
+        .ant-input {
+            border-color: transparent;
+            box-shadow: none;
+        }
+    }
+    
+    .ant-tabs-bar {
+        border: 0 !important
+    }
+}
+
 .drawer-exec,
 .drawer-exec-history-detail,
 .report-drawer-exec-history,
