feat: 优化新建期望表格边框消失问题

--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -138,7 +138,7 @@
 
 .mock-detail-form {
     .ant-table-tbody > tr > td {
-        padding: 4px 0;
+        padding: 4px;
         background-color: #fff !important;
     }
 
@@ -156,6 +156,12 @@
         .ant-input {
             border-color: transparent;
             box-shadow: none;
+        }
+
+        .ant-table-bordered {
+            table {
+                border-collapse: collapse;
+            }
         }
     }
     
