--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -115,6 +115,12 @@
 .dp-bg-input-transparent {
   background-color: transparent;
   border: 0;
+
+  .ant-input.ant-select-selection-search-input {
+    width: 100%;
+    background-color: transparent;
+    border: 0;
+  }
 }
 
 .dp-bg-button-transparent {
