feat: 引导模块样式问题

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -470,3 +470,13 @@ input:-webkit-autofill { -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !impor
     //padding: 12px!important;
   }
 }
+
+// 反馈最大宽度为 780px
+.feedback-help-tooltip{
+  max-width: 780px!important;
+}
+.feedback-desc-icon{
+  min-width: 12px;
+  max-width: 12px;
+  width: 12px;
+}
