--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -151,6 +151,10 @@
   padding: 3px 5px;
   cursor: pointer !important;
 }
+.dp-icon-btn2 {
+  padding: 3px 2px;
+  cursor: pointer !important;
+}
 
 .dp-icon {
   &:focus {
