fix yaml display issue

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -189,6 +189,16 @@
     min-height: 24px;
   }
 }
+.dp-tip-white {
+  .ant-tooltip-inner {
+    background-color: #ffffff;
+    border: 1px solid #ededed;
+    line-height: 20px;
+    .tips {
+      color: rgba(0, 0, 0, 0.5);
+    }
+  }
+}
 
 .dp-ellipsis {
   overflow: hidden;
