--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -25,6 +25,10 @@
   cursor: pointer;
   color: #c0c4cc;
 }
+.dp-link-black {
+  cursor: pointer;
+  color: #8A8A8A;
+}
 
 .dp-link-primary {
   cursor: pointer;
@@ -177,6 +181,7 @@
   padding-top: 8px;
   font-size: 13px;
   white-space: pre-line;
+  color: #a5a3a1;
 }
 
 .dp-tip-small {
@@ -356,10 +361,16 @@
     flex: 1;
   }
   .upload-container {
-    width: 120px;
+    width: 45px;
   }
   .upload-path {
     flex: 1;
+  }
+
+  .download {
+    display: inline-block;
+    text-align: center;
+    width: 50px;
   }
 }
 
@@ -470,9 +481,9 @@ input:-webkit-autofill { -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !impor
   .debug-index-wrapper{
     padding: 16px;
   }
- .ant-card{
+  .ant-card{
     margin-bottom: 16px;
- }
+  }
 }
 
 // 执行日志树，叶子结点不展示
