--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -469,7 +469,8 @@
 input:-webkit-autofill { -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !important; }
 
 .create-project-modal.ant-modal .ant-modal-body {
-  padding: 0;
+  padding-bottom: 0;
+  overflow: hidden;
 }
 
 .term {
