fix: [LYAPI-1066]样式问题

--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -18,11 +18,7 @@
     color: rgba(0, 0, 0, 0.45);
     cursor: default;
 }
-.dp-no-label-after {
-    .ant-form-item-label > label::after {
-        content: '' !important;
-    }
-}
+
 .ant-form-item.dp-form-item-no-bottom-space {
     margin-bottom: 0px;
 }
@@ -243,5 +239,11 @@
 .custom-center-form {
     .ant-row {
         justify-content: center;
+    }
+}
+
+.inline-form {
+    .ant-row {
+        margin-bottom: 16px;
     }
 }
