--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -57,9 +57,15 @@
 .dp-color-pass {
   color: green;
 }
+.pass {
+  color: #14945a;
+}
 
 .dp-color-fail {
   border-color: #dc2626;
+}
+.fail {
+  color: #D8021A;
 }
 
 .dp-field-error {
