--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -247,3 +247,15 @@
         margin-bottom: 16px;
     }
 }
+
+
+.ant-table .ant-table-row-indent + .ant-table-row-expand-icon {
+    border-radius: 50%;
+    transform: translateY(-1px);
+    color: #18a0fb;
+    border-color: currentColor;
+}
+
+.ant-table-row-collapsed::after {
+    line-height: 14px;
+}
