--- a/src/components/CategoryTree/index.less
+++ b/src/components/CategoryTree/index.less
@@ -1,4 +1,34 @@
 
+.category-tree-container {
+  height: 100%;
+
+  .tag-filter-form {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+
+    .search-input {
+      margin-right: 8px;
+    }
+
+    .add-btn {
+      cursor: pointer;
+    }
+  }
+
+  .category-tree {
+    height: calc(100% - 50px);
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+}
+
+.category-tree-empty {
+  text-align: center;
+  margin-top: 10px;
+}
+
 .category-tree {
   .ant-tree-node-content-wrapper {
     width: calc(100% - 24px);
@@ -13,8 +43,10 @@
 
   .tree-title {
     position: relative;
+    display: flex;
     .tree-title-text {
       width: 100%;
+      padding-right: 16px;
       display: inline-block;
       white-space: nowrap;
       overflow: hidden;
@@ -24,6 +56,9 @@
       position: absolute;
       right: -8px;
       width: 20px;
+    }
+    .tree-icon {
+      margin-right: 4px;
     }
   }
 
