--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -622,3 +622,8 @@ input:-webkit-autofill { -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !impor
   }
 
 }
+
+.dp-action-submenu .ant-dropdown-menu-title-content {
+  display: inline-block;
+  padding: 0 6px 0 0;
+}
