--- a/src/components/CategoryTree/index.less
+++ b/src/components/CategoryTree/index.less
@@ -30,6 +30,14 @@
 }
 
 .category-tree {
+  .ant-tree-list-holder {
+    overflow-x: hidden;
+  }
+
+  .ant-tree-treenode {
+    width: 100%;
+  }
+
   .ant-tree-node-content-wrapper {
     width: calc(100% - 24px);
     display: inline-flex;
