fix: 组件tree样式异常问题/切换页面报错问题

--- a/src/components/CategoryTree/index.less
+++ b/src/components/CategoryTree/index.less
@@ -19,8 +19,7 @@
 
   .category-tree {
     height: calc(100% - 50px);
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow: hidden;
   }
 }
 
