save localValue in browser cache

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -204,6 +204,11 @@
     min-height: 24px;
   }
 }
+.dp-tip-wide {
+  .ant-tooltip-content {
+    width: 400px;
+  }
+}
 .dp-tip-white {
   .ant-tooltip-inner {
     background-color: #ffffff;
