更新 src/assets/css/custom.less

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -555,7 +555,7 @@ input:-webkit-autofill { -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !impor
   }
 
   .btn-primary:hover{
-    olor: #fff!important;
+    color: #fff!important;
     background: #40a9ff!important;
     border-color: #40a9ff!important;
   }
