fix: schema tree 展开时更多按钮位置闪动

--- a/src/components/CategoryTree/index.less
+++ b/src/components/CategoryTree/index.less
@@ -37,6 +37,10 @@
     width: 100%;
   }
 
+  .ant-tree-treenode-motion {
+    width: 100%;
+  }
+
   .ant-tree-node-content-wrapper {
     display: inline-flex;
     align-items: center;
@@ -45,7 +49,8 @@
     
 
     .ant-tree-title {
-      width: 100%;
+      // width: 100%;
+      flex: 1;
     }
   }
 
