--- a/src/components/CategoryTree/index.less
+++ b/src/components/CategoryTree/index.less
@@ -85,4 +85,24 @@
   .ant-tree-list-scrollbar {
     width: 2px !important;
   }
+
+  .interface-title-text {
+    .interface-method-text {
+      width: 32px;
+      margin-right: 20px;
+      display: inline-block;
+    }
+    .interface-method {
+      position: relative;
+
+      .interface-method-badge {
+        position: absolute;
+        top: -4px;
+        right: -14px;
+        font-size: 10px;
+        display: inline-block;
+        line-height: 16px;
+      }
+    }
+  }
 }
