performance testing exec

--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -85,6 +85,9 @@
         }
     }
 }
+.ant-modal.dp-modal-full-height-with-footer .ant-modal-content .ant-modal-body {
+    height: calc(100% - 108px);
+}
 
 .ant-drawer-close {
     height: 48px;
