fix: #LYAPI-2035,#LYAPI-2038,拖动目录出现异常的重复目录修复

--- a/src/components/CategoryTree/index.less
+++ b/src/components/CategoryTree/index.less
@@ -89,7 +89,7 @@
   .interface-title-text {
     .interface-method-text {
       width: 32px;
-      margin-right: 20px;
+      margin-right: 6px;
       display: inline-block;
     }
     .interface-method {
@@ -97,11 +97,12 @@
 
       .interface-method-badge {
         position: absolute;
-        top: -4px;
-        right: -14px;
+        top: -8px;
+        right: -10px;
         font-size: 10px;
         display: inline-block;
         line-height: 16px;
+        transform: scale(.8);
       }
     }
   }
