--- a/src/components/DropDownMenu/index.less
+++ b/src/components/DropDownMenu/index.less
@@ -17,12 +17,28 @@
     align-items: center;
     justify-content: center;
 
-    span {
+    .drop-down-menu-text {
       display: inline-block;
       width: 100%;
       height: 100%;
       min-width: 56px;
       padding: 0 12px;
+
+      &:has(.exec-btn) {
+        padding: 0;
+        span {
+          width: 100%;
+        }
+      }
+
+      .exec-btn {
+        border: none;
+        outline: none;
+        height: 100%;
+        width: 100%;
+        padding: 0 12px;
+        text-align: left;
+      }
     }
   }
 }
