feat: #LYAPI-1989,测试报告页面提交bug需求

--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -273,3 +273,40 @@
 .ant-drawer-wrapper-body {
     overflow: hidden;
 }
+
+.submit-bug-modal {
+    width: 500px !important;
+    .ant-modal-body {
+        padding: 0;
+
+        .ant-modal-confirm-content {
+            padding: 24px !important;
+            font-size: 14px;
+            line-height: 1.5715;
+            word-wrap: break-word;
+        }
+
+        .ant-modal-confirm-title {
+            padding: 16px 24px;
+            color: rgba(0, 0, 0, 0.65);
+            background: #fff;
+            border-bottom: 1px solid #f0f0f0;
+            border-radius: 2px 2px 0 0;
+        }
+
+        .ant-modal-confirm-btns {
+            width: 100%;
+            padding: 10px 16px;
+            text-align: right;
+            background: transparent;
+            border-top: 1px solid #f0f0f0;
+            border-radius: 0 0 2px 2px;
+            margin-top: 0 Im !important;
+        }
+
+        .ant-select {
+            width: 320px;
+            margin-left: 20px;
+        }
+    }
+}
