--- a/src/components/DropDownMenu/index.less
+++ b/src/components/DropDownMenu/index.less
@@ -39,7 +39,25 @@
         padding: 0 12px;
         text-align: left;
       }
+
+      
+        .label-desc {
+          display: flex;
+          width: 250px;
+
+          .label {
+            flex: 1;
+            text-align: left;
+          }
+          .desc {
+            flex: 1;
+            font-weight: bold;
+            text-align: right;
+          }
+        }
     }
+
+    
   }
 }
 
@@ -56,3 +74,5 @@
     overflow-y: scroll;
   }
 }
+
+
