fix: #LYAPI-2190,动态参数设置不正确

--- a/src/components/DropDownMenu/index.less
+++ b/src/components/DropDownMenu/index.less
@@ -71,7 +71,7 @@
 .ly-drop-down-sub-menu {
   .ant-dropdown-menu {
     max-height: 300px;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 }
 
