config tool llm

--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -84,6 +84,9 @@
         overflow: auto;
     }
 }
+.ant-tabs.dp-tabs-small-gap .ant-tabs-tab {
+    margin-left: 6px;
+}
 .ant-tabs.dp-tabs-full-height{
     height: 100%;
     .ant-tabs-bar.ant-tabs-top-bar {
