--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -85,7 +85,7 @@
     }
 }
 .ant-tabs.dp-tabs-small-gap .ant-tabs-tab {
-    margin-left: 6px;
+    margin-left: 0;
 }
 .ant-tabs.dp-tabs-full-height{
     height: 100%;
