--- a/src/assets/css/antd-adjust.less
+++ b/src/assets/css/antd-adjust.less
@@ -85,7 +85,10 @@
     }
 }
 .ant-tabs.dp-tabs-small-gap .ant-tabs-tab {
-    margin-left: 0;
+    margin-left: 2px;
+    &:last-child {
+        color: #fc5531;
+    }
 }
 .ant-tabs.dp-tabs-full-height{
     height: 100%;
